# udacity_bot

./: CMakeLists.txt  package.xml
config/: amcl_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
launch/: amcl.launch  udacity_world.launch
urdf/: udacity_bot.gazebo  udacity_bot.xacro
worlds/: arn_cylinders.world
